--- a/firstproject_2/src/main/resources/application.properties
+++ b/firstproject_2/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=firstproject_2
 server.servlet.encoding.force=true
 spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
